fix: overflow-y

--- a/src/styles/index/main.scss
+++ b/src/styles/index/main.scss
@@ -1,4 +1,6 @@
 .auc {
+  width: 100%;
+  height: 100%;
   min-height: 100vh;
   padding: 0 15px;
   padding-top: 5rem;
@@ -21,15 +23,18 @@
   flex: 1 1;
   flex-direction: column;
 
-  width: 100%;
+  height: calc(100vh - 11rem);
   max-height: 100%;
   margin-right: 2rem;
+}
+
+.auc__lots-wrapper {
+  padding-right: 1rem;
 }
 
 .auc__item {
   display: flex;
   align-items: center;
-  justify-content: space-between;
 
   width: 100%;
   margin-bottom: 1em;
@@ -76,15 +81,18 @@
 .auc__lot {
   flex: 1 0;
 
+  width: 100%;
+  min-width: 30rem;
+
   text-align: right;
 }
 
 .auc__total-sum {
-  max-width: 15%;
+  max-width: 15rem;
 }
 
 .auc__current-sum {
-  max-width: 12%;
+  max-width: 12rem;
 }
 
 .auc__add-sum {
@@ -108,7 +116,8 @@
 .auc__add-lot {
   @include auc-btn;
 
-  max-width: calc(100% - 6rem);
+  max-width: calc(100% - 7rem);
+  margin-bottom: 1rem;
   padding: .3em .2em;
 
   &:active {
@@ -152,6 +161,10 @@
 
   color: $color-primary-light;
   text-shadow: 0 5px $color-primary-dark;
+
+  span {
+    font-size: 4rem;
+  }
 }
 
 .auc__start {
